deploy/k8s/gke/default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: trip
          servicePort: 80
        path: /services/trip/(.*)
      - backend:
          serviceName: invoice
          servicePort: 80
        path: /services/invoice/(.*)
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /(.*)
